--- a/home/style.css
+++ b/home/style.css
@@ -6,7 +6,7 @@
 
     position: absolute;
     height: 860px;
-    width: 100vw;
+    width: 100%;
     left: 0px;
     top: 0px;
     border-radius: 0px;
